--- a/app/src/main/res/drawable/ic_home_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_home_black_24dp.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+        android:pathData="M20.5,3l-5.6,2.2L8,3.13c-0.16,-0.06 -0.34,-0.06 -0.5,0.01l-5,2C2.21,5.21 2,5.49 2,5.8v14.7c0,0.55 0.45,1 1,1 0.13,0 0.26,-0.03 0.38,-0.08L8,19.13l6,2.07c0.16,0.06 0.34,0.06 0.5,-0.01l5,-2c0.29,-0.12 0.5,-0.4 0.5,-0.71V4.8c0,-0.55 -0.45,-1 -1,-1 -0.13,0 -0.26,0.03 -0.38,0.08zM9,5.13l6,2.07v11.67l-6,-2.07V5.13z"/>
 </vector>
