--- a/app/src/main/res/drawable/ic_notifications_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_notifications_black_24dp.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M12,22c1.1,0 2,-0.9 2,-2h-4c0,1.1 0.89,2 2,2zM18,16v-5c0,-3.07 -1.64,-5.64 -4.5,-6.32L13.5,4c0,-0.83 -0.67,-1.5 -1.5,-1.5s-1.5,0.67 -1.5,1.5v0.68C7.63,5.36 6,7.92 6,11v5l-2,2v1h16v-1l-2,-2z" />
+        android:pathData="M23,8v2h-3.17l-2.76,5.52c-0.17,0.34 -0.52,0.48 -0.87,0.36c-0.35,-0.13 -0.53,-0.52 -0.4,-0.87L16.83,10H13v4.17l2.29,2.29c0.19,0.19 0.19,0.51 0,0.7c-0.19,0.19 -0.51,0.19 -0.7,0L12,15.17l-2.59,2.59c-0.19,0.19 -0.51,0.19 -0.7,0c-0.19,-0.19 -0.19,-0.51 0,-0.7L11,14.17V10H7.17l1.17,2.34c0.13,0.35 -0.05,0.74 -0.4,0.87c-0.35,0.13 -0.7,-0.02 -0.87,-0.36L4.17,10H1V8h3.17l2.76,-5.52c0.17,-0.34 0.52,-0.48 0.87,-0.36c0.35,0.13 0.53,0.52 0.4,0.87L7.17,8H11V3.83L8.71,1.54c-0.19,-0.19 -0.19,-0.51 0,-0.7c0.19,-0.19 0.51,-0.19 0.7,0L12,2.83l2.59,-2.59c0.19,-0.19 0.51,-0.19 0.7,0c0.19,0.19 0.19,0.51 0,0.7L13,3.83V8h3.83l-1.17,-2.34c-0.13,-0.35 0.05,-0.74 0.4,-0.87c0.35,-0.13 0.7,0.02 0.87,0.36L19.83,8H23z"/>
 </vector>
