--- a/app/src/main/res/drawable/ic_fire.xml
+++ b/app/src/main/res/drawable/ic_fire.xml
@@ -2,9 +2,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="384"
+    android:viewportWidth="448"
     android:viewportHeight="512">
     <path
-        android:fillColor="#f20d0d"
-        android:pathData="M216 24.6c-7.6-10.7-23.4-10.7-31 0C164.7 49.2 144 90.7 144 144c0 53 43 96 96 96s96-43 96-96c0-53.3-20.7-94.8-56-119.4zM192 512c-88.4 0-160-71.6-160-160 0-77.7 55.1-139.2 104.6-192.2C151.2 142.7 160 164.2 160 192c0 70.7 57.3 128 128 128s128-57.3 128-128c0-27.8 8.8-49.3 23.4-64.2C360.9 212.8 416 274.3 416 352c0 88.4-71.6 160-160 160z"/>
+        android:fillColor="#ff2600"
+        android:pathData="M159.3 5.4c7.8-7.3 19.9-7.2 27.7 .1c27.6 25.9 53.5 53.8 77.7 84c11-14.4 23.5-30.1 37-42.9c7.9-7.4 20.1-7.4 28 .1c34.6 33 63.9 76.6 84.5 118c20.3 40.8 33.8 82.5 33.8 111.9C448 404.2 348.2 512 224 512C98.4 512 0 404.1 0 276.5c0-38.4 17.8-85.3 45.4-131.7C73.3 97.7 112.7 48.6 159.3 5.4zM225.7 416c25.3 0 47.7-7 68.8-21c42.1-29.4 53.4-88.2 28.1-134.4c-4.5-9-16-9.6-22.5-2l-25.2 29.3c-6.6 7.6-18.5 7.4-24.7-.5c-16.5-21-46-58.5-62.8-79.8c-6.3-8-18.3-8.1-24.7-.1c-33.8 42.5-50.8 69.3-50.8 99.4C112 375.4 162.6 416 225.7 416z"/>
 </vector> 
